--- a/build.xml
+++ b/build.xml
@@ -5,7 +5,7 @@
 	</description>
 	<target name="composer">
 		<exec executable="composer">
-			<arg value="install">
+			<arg value="install"/>
 		</exec>
 	</target>
 </project>
