fixing build.xml

--- a/build.xml
+++ b/build.xml
@@ -20,7 +20,10 @@
             <arg value="--no-progress"/>
         </exec>
     </target>
-    <target name="uibuild" depends="init">
+    <target name="uibuild.init" depends="init">
+    	<ant antfile="../build.xml" dir="vc-angular" target="uibuild" inheritAll="true" inheritRefs="true"/>
+    </target>
+    <target name="uibuild" depends="init, uibuild.init">
     	<exec executable="npm.cmd">
     		<arg value="config"/>
     		<arg value="set"/>
