--- a/build.xml
+++ b/build.xml
@@ -2,14 +2,14 @@
 <project name="VC Scheduler">
 	<property name="buildtools" value="${basedir}/buildtools"/>
 	<property name="uisource" value="${basedir}/vc-angular"/>
-	<property name="uibuild" value="${uisource}/build"/>
+	<property name="uibuild" value="${uisource}/dist/vc-angular"/>
+	<property name="laravelpublic" value="${basedir}/public"/>
 	<property name="npm.mirror" value="https://skimdb.npmjs.com/registry"/>
 	<description>
 		Conference scheduling tool for Tatasky.
 	</description>
 	<target name="init">
 		<mkdir dir="${buildtools}"/>
-		<mkdir dir="${uibuild}"/>
 	</target>
 	<target name="composer" description="Install composer packages including require-dev." depends="init">
         <get src="https://getcomposer.org/download/1.2.1/composer.phar" dest="composer.phar"/>
@@ -30,5 +30,14 @@
     	<exec executable="ng.cmd" failonerror="true">
     		<arg value="build"/>
     	</exec>
+    </target>
+    <target name="integrate.ui">
+    	<copy file="${uibuild}/index.html" tofile="${basedir}/resources/views/index.blade.php"/>
+    	<copy file="${uibuild}/main.js" todir="${laravelpublic}/"/>
+    	<copy file="${uibuild}/polyfills.js" todir="${laravelpublic}/"/>
+    	<copy file="${uibuild}/runtime.js" todir="${laravelpublic}/"/>
+    	<copy file="${uibuild}/scripts.js" todir="${laravelpublic}/"/>
+    	<copy file="${uibuild}/styles.js" todir="${laravelpublic}/"/>
+    	<copy file="${uibuild}/vendor.js" todir="${laravelpublic}/"/>
     </target>
 </project>
